@@ -1,6 +1,7 @@
 ChangeLog
 lib/Pugs/Compiler/Rule.pm
 lib/Pugs/Emitter/Rule/Perl5.pm
+lib/Pugs/Emitter/Rule/Perl5/Ratchet.pm
 lib/Pugs/Grammar/Base.pm
 lib/Pugs/Grammar/Rule/Rule.pm
 lib/Pugs/Grammar/Rule/Rule.pmc
